semantic search fixes
